Xrandr: Catch-up with GSD 3.16 - Simplify layout of adjacent screens

Rather than going through the loop a number of times,
add the outputs to a GPtrArray directly, and sort it.

https://bugzilla.gnome.org/show_bug.cgi?id=704286